// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: branch 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_branch_X"
    id="component_navigation.status.failed_branch_X"
    values={
      Object {
        "branch": "my/branch",
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: branch for admins 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_branch_X"
    id="component_navigation.status.failed_branch_X"
    values={
      Object {
        "branch": "my/branch",
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: default 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_X"
    id="component_navigation.status.failed_X"
    values={
      Object {
        "branch": undefined,
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: in progress 1`] = `
<Alert
  display="banner"
  variant="info"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.in_progress_X"
    id="component_navigation.status.in_progress_X"
    values={
      Object {
        "branch": undefined,
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: license issue 1`] = `
<Connect(withAppState(ComponentNavLicenseNotif))
  currentTask={
    Object {
      "analysisId": "x123",
      "componentKey": "foo",
      "componentName": "Foo",
      "componentQualifier": "TRK",
      "errorMessage": "Foo",
      "errorType": "LICENSING",
      "id": "AXR8jg_0mF2ZsYr8Wzs2",
      "status": "FAILED",
      "submittedAt": "2020-09-11T11:45:35+0200",
      "type": "REPORT",
    }
  }
/>
`;

exports[`renders correctly: no current task 1`] = `""`;

exports[`renders correctly: on background task page 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_X.admin.help"
    id="component_navigation.status.failed_X.admin.help"
    values={
      Object {
        "branch": undefined,
        "stacktrace": "background_tasks.show_stacktrace",
        "type": "background_task.type.REPORT",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: on background task page for branch 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_branch_X.admin.help"
    id="component_navigation.status.failed_branch_X.admin.help"
    values={
      Object {
        "branch": "my/branch",
        "stacktrace": "background_tasks.show_stacktrace",
        "type": "background_task.type.REPORT",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: pending 1`] = `
<Alert
  display="banner"
  variant="info"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.pending_X"
    id="component_navigation.status.pending_X"
    values={
      Object {
        "branch": undefined,
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": undefined,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: pending for admins 1`] = `
<Alert
  display="banner"
  variant="info"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.pending_X.admin.link"
    id="component_navigation.status.pending_X.admin.link"
    values={
      Object {
        "branch": undefined,
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/background_tasks",
              "query": Object {
                "id": "my-project",
                "status": "__ALL__",
              },
            }
          }
        >
          background_tasks.page
        </Link>,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: pull request 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_branch_X.admin.link"
    id="component_navigation.status.failed_branch_X.admin.link"
    values={
      Object {
        "branch": "650 - feature/my_pr",
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/background_tasks",
              "query": Object {
                "id": "my-project",
                "status": undefined,
              },
            }
          }
        >
          background_tasks.page
        </Link>,
      }
    }
  />
</Alert>
`;

exports[`renders correctly: pull request for admins 1`] = `
<Alert
  display="banner"
  variant="error"
>
  <FormattedMessage
    defaultMessage="component_navigation.status.failed_branch_X.admin.link"
    id="component_navigation.status.failed_branch_X.admin.link"
    values={
      Object {
        "branch": "650 - feature/my_pr",
        "stacktrace": undefined,
        "type": "background_task.type.REPORT",
        "url": <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/project/background_tasks",
              "query": Object {
                "id": "my-project",
                "status": undefined,
              },
            }
          }
        >
          background_tasks.page
        </Link>,
      }
    }
  />
</Alert>
`;
